# koyuki_analyzer

./: .gitignore  CGGA325_TPM_diff_result.xlsx  GLASS_TPM GBM WHO4 复发_logrank_result.xlsx  GLASS_TPM P值界定，IDH野生型 胶质母细胞瘤，复发_logrank_result.xlsx  GSE200563_TPM_logrank_result.xlsx  README.md  R差异分析_OPC-like MalignantvsAC-like Malignant_筛选=无.xlsx  R差异分析_组1vs组2_筛选=无.xlsx  debug_cluster.py  debug_cluster10.py  debug_cluster11.py  debug_cluster12.py  debug_cluster13.py  debug_cluster14.py  debug_cluster15.py  debug_cluster16.py  debug_cluster17.py  debug_cluster18.py  debug_cluster19.py  debug_cluster2.py  debug_cluster20.py  debug_cluster21.py  debug_cluster22.py  debug_cluster3.py  debug_cluster4.py  debug_cluster5.py  debug_cluster6.py  debug_cluster7.py  debug_cluster8.py  debug_cluster9.py  test_mast_debug.py  差异分析_Bon+BravsPrimary_筛选=cell_type=EPITHELIAL.xlsx  差异分析_Brain MetastasisvsPrimary_筛选=cell_type=EPITHELIAL.xlsx  差异分析_TumoralvsPeritumoral_筛选=无.xlsx
StaVIA轨迹分析参考/omicverse-master/omicverse-master/: .gitignore  .gitmodules  MANIFEST.in  README.md  pyproject.toml
StaVIA轨迹分析参考/omicverse-master/omicverse-master/.github/workflows/: claude-code-review.yml  deploy-docs.yml  publish-pypi.yml  python-package.yml
StaVIA轨迹分析参考/omicverse-master/omicverse-master/READMEM/: README_CN.md  README_DE.md  README_ES.md  README_FR.md  README_JP.md  README_KR.md
StaVIA轨迹分析参考/omicverse-master/omicverse-master/examples/: parametric_umap_projection.md
StaVIA轨迹分析参考/omicverse-master/omicverse-master/omicverse/: __init__.py  _monitor.py  _optional.py  _registry.py  _settings.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/omicverse/airr/: __init__.py  _bcr.py  _bulk.py  _clonotype.py  _metrics.py  _qc.py  _tcr.py  _tcr_gex.py  io.py  plotting.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/omicverse/alignment/: __init__.py  simpleaf.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/omicverse/bulk/: _Deseq2.py  _Enrichment.py  __init__.py  _dynamicTree.py  _enrich_plot.py  _gsea_numpy.py  _ora.py  _wgcna.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/omicverse/bulk2single/: _bulk2single.py  _map_utils.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/omicverse/datasets/: __init__.py  _airr.py  _ambient.py  _datasets.py  _ev.py  _genetics.py  _metabolism.py  _protein.py  _signatures.py  _timecourse.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/omicverse/epi/: __init__.py  _utils.py  bulk.py  data.py  datasets.py  io.py  pl.py  pp.py  single.py  tl.py  upstream.py  utils.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/omicverse/es/: __init__.py  _aucell.py  _consensus.py  _data.py  _datatype.py  _decouple.py  _engine.py  _gsea.py  _gsva.py  _mdt.py  _method.py  _methods.py  _mlm.py  _net.py  _odeps.py  _ora.py  _pv.py  _query_set.py  _run.py  _ucell.py  _udt.py  _ulm.py  _viper.py  _waggr.py  _zscore.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/omicverse/genetics/: __init__.py  _coloc.py  _eqtl.py  _finemap.py  _gsmap.py  _gwas.py  _ldsc.py  _mr.py  _scdrs.py  _simulate.py  _twas.py  _utils.py  io.py  plotting.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/omicverse/io/: __init__.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/omicverse/llm/: geneformer_model.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/omicverse/metabol/: __init__.py  _lipidomics.py  _msea.py  _qc.py  plotting.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/omicverse/micro/: _pair.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/omicverse/mol/: __init__.py  _check.py  _dock.py  _drugs.py  _pocket.py  _structure.py  _view.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/omicverse/pl/: __init__.py  _bulk.py  _ccc.py  _cnv.py  _cpdbviz.py  _dotplot.py  _dynamic_trends.py  _funkyheatmap.py  _heatmap_marsilea.py  _metabolism.py  _metacell.py  _perturbation.py  _plot_backend.py  _qc.py  _scatterplot_backend.py  _trajectory.py  _upset.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/omicverse/pp/: __init__.py  _champ.py  _compat.py  _connectivity.py  _highly_variable_genes.py  _neighbors.py  _normalization.py  _pca.py  _preprocess.py  _qc.py  _scrublet.py  _tsne.py  _umap.py  pyg_knn_implementation.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/omicverse/protein/: __init__.py  _de.py  _design.py  _enrich.py  _impute.py  _norm.py  _qc.py  _simulate.py  _summarize.py  io.py  plotting.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/omicverse/single/: _SCSA.py  __init__.py  _anno.py  _annotation.py  _annotation_ref.py  _aucell.py  _augur.py  _autoresolution.py  _batch.py  _cellvote.py  _cnv.py  _deg_ct.py  _dynamic_features.py  _gptcelltype.py  _gptcelltype_local.py  _metabolism.py  _metacell.py  _nmf.py  _perturb.py  _pseudobulk.py  _pseudotime_fate.py  _sccaf.py  _scenic.py  _scgsea.py  _stavia.py  _traj.py  _velo.py  _via.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/omicverse/space/: __init__.py  _deconvolution.py  _split.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/omicverse/utils/: __init__.py  _compat.py  _data.py  _heatmap.py  _paga.py  _plot.py  _roe.py  _sample_metadata_alignment.py  _seed.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/readthedocs/en/: .readthedocs.yaml
StaVIA轨迹分析参考/omicverse-master/omicverse-master/tests/: test_augur.py  test_es_methods.py  test_gpuex_scipy_rankdata.py  test_histo_e2e.py  test_io_xenium_morphology.py  test_metabol_v02.py  test_metabolite_ccc_schema.py  test_mol.py  test_protein.py  test_roe.py  test_sample_metadata_alignment.py  test_scenic_grn_gene_names.py  test_set_seed.py  test_single_batch_scvi_family.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/tests/airr/: test_clonal_expansion.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/tests/architecture/: test_lazy_backend_wiring.py  test_optional_torch_dependencies.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/tests/bulk/: test_bulk2single.py  test_deg_backends.py  test_geneset_resolution.py  test_gsea_numpy.py  test_ora.py  test_timecourse_deg.py  test_wgcna_compat.py
StaVIA轨迹分析参考/omicverse-master/omicverse-master/tests/genetics/: test_gsmap.py  (+1 more)
(+308 files in other folders)
